--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,15 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>3.37.0 Zone affolate</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Implementato il sistema di allarme delle zone affolate</span><br>
+                            <span class="color-green text-bold">Implementata la visualizzazione delle zone affolate con le relative informazioni</span><br>
+                            <span class="color-green text-bold">Implementato il campo MAX_PEOPLE con le operazioni CRUD</span><br>
+                        </td>
+                        <td md-cell>22/09/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>3.36.0 Controllo accessi</td>
                         <td md-cell>
                             <span class="color-green text-bold">Implementata la nuova tipologia di ancore nel canvas e nelle tablelle con tutte le operazioni e le icone</span><br>
