--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,15 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>3.38.0 Evacuazione</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Implementata la segnalazione delle zone che hanno superato la capienza massima</span><br>
+                            <span class="color-green text-bold">Implementata tutta la gestione dell'evacuazione</span><br>
+                            <span class="color-green text-bold">Implementato il local storage per utente</span><br>
+                        </td>
+                        <td md-cell>23/09/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>3.37.0 Zone affolate</td>
                         <td md-cell>
                             <span class="color-green text-bold">Implementato il sistema di allarme delle zone affolate</span><br>
