--- a/components/emergency-alarm-info.html
+++ b/components/emergency-alarm-info.html
@@ -14,7 +14,7 @@
 
         <div layout="column">
             <div layout="row" layout-align="center center" class="">
-                <h1 class=" font-iceberg font-x-large">{{lang.evacuationState | uppercase}}</h1>
+                <h1 class=" font-iceberg color-white font-x-large">{{lang.evacuationState | uppercase}}</h1>
             </div>
         </div>
     </md-toolbar>
@@ -24,37 +24,76 @@
     <md-content class="popup-padding">
         <div layout="row" layout-align="center center">
             <div layout="column">
-                <md-progress-circular ng-show="data.length === 0" md-diameter="100"
-                                      md-mode="indeterminate"></md-progress-circular>
-                <canvas ng-show="data.length !== 0" class="chart chart-doughnut"
-                        chart-data="data" chart-labels="labels" chart-colors="colors">
-                </canvas>
-            </div>
-            <div layout="column">
-                <md-list>
-                    <md-list-item class="md-3-line">
-                        <img src="img/icons/safe-men.png" class="md-avatar" alt="{{lang.safeAreaPersons}}"
-                             title="{{lang.safeAreaPersons}}">
-                        <div class="md-list-item-text" layout="column">
-                            <h3>{{lang.safeAreaPersons}}: <b class="color-green">{{ men.safe }}</b></h3>
-                            <h4>{{ men.safe }} {{lang.safeAreaPersons | lowercase}}</h4>
+                <md-progress-circular ng-show="isAnchorsEmpty()" md-diameter="100" md-mode="indeterminate"
+                                    class="margin-auto"></md-progress-circular>
+                <div ng-repeat="zone in anchorsInfo" layout="row" class="padding-tb-5-px border-bottom-1-lightgray">
+                    <div layout="row">
+                        <div layout="column">
+                            <canvas  class="chart chart-doughnut width-150px"
+                                    chart-data="zone.anchorData" chart-labels="labels" chart-colors="colors">
+                            </canvas>
                         </div>
-                    </md-list-item>
-                    <md-list-item class="md-3-line">
-                        <img src="img/icons/unsafe-men.png" class="md-avatar"
-                             alt="{{lang.notSafeAreaPersons}}" title="{{lang.notSafeAreaPersons}}">
-                        <div class="md-list-item-text" layout="column">
-                            <h3>{{lang.notSafeAreaPersons}}: <b class="color-red">{{ men.unsafe }}</b></h3>
-                            <h4>{{ men.unsafe }} {{lang.notSafeAreaPersons | lowercase}}</h4>
-                            <md-select ng-if="unsafeTags.length > 0" ng-model="antani"
-                                       placeholder="{{lang.lostPersons}}">
-                                <md-option ng-value="tag" ng-disabled="$index + 1" ng-repeat="tag in unsafeTags">
-                                    {{tag.name}}
-                                </md-option>
-                            </md-select>
+                        <div layout="column">
+                            <div layout="row">
+                                <div layout="column">
+                                    <div layout="row" class="color-black padding-lr-30-tb-5-px background-darkcyan-50-opacity border-right-1-gray text-bold"><span class="text-center margin-auto">Nome</span></div>
+                                    <div layout="row"><span class="text-center padding-left-15-px padding-right-15-px padding-top-10-px width-100">{{zone.anchorName}}</span></div>
+                                </div>
+                                <div layout="column">
+                                    <div layout="row" class="color-black padding-lr-30-tb-5-px background-darkcyan-50-opacity border-right-1-gray text-bold"><span class="text-center margin-auto">Piano</span></div>
+                                    <div layout="row"><span class="text-center width-100 padding-left-15-px padding-right-15-px padding-top-10-px">{{zone.anchorFloor}}</span></div>
+                                </div>
+                                <div layout="column">
+                                    <div layout="row" class="color-black padding-lr-30-tb-5-px background-darkcyan-50-opacity border-right-1-gray text-bold"><span class="text-center margin-auto">Zona</span></div>
+                                    <div layout="row"><span class="text-center padding-left-15-px padding-right-15-px padding-top-10-px width-100">{{zone.zone}}</span></div>
+                                </div>
+                                <div layout="column">
+                                    <div layout="row" class="color-black padding-lr-30-tb-5-px background-darkcyan-50-opacity text-bold"><span class="text-center margin-auto">Presenti/Totali</span></div>
+                                    <div layout="row"><span class="text-center padding-left-15-px padding-right-15-px padding-top-10-px width-100">{{zone.anchorTags.length}}/{{zone.zoneMax}}</span></div>
+                                </div>
+                                <div layout="column">
+                                    <div layout="row" class="color-black padding-lr-30-tb-5-px background-darkcyan-50-opacity text-bold"><span class="text-center margin-auto">Tags</span></div>
+
+                                    <div layout="row" class="padding-top-3-px">
+                                        <md-select ng-model="empty" ng-if="zone.anchorTags.length > 0" placeholder="{{lang.tag}}" class="margin-none">
+                                            <md-option ng-value="tag" ng-disabled="$index + 1" ng-repeat="tag in zone.anchorTags track by $index">
+                                                <img src="img/icons/offline_tags_alert_red_24.png" class="margin-right-10-px" alt="{{lang.offlineTags}}" 
+                                                title="{{lang.offlineTags}}"><span class="font-large vertical-align-super">{{tag.name}}</span>
+                                            </md-option>
+                                        </md-select>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- <md-list>
+                                <md-list-item class="md-3-line">
+                                    <img src="img/icons/safe-men.png" class="md-avatar" alt="{{lang.safeAreaPersons}}"
+                                        title="{{lang.safeAreaPersons}}">
+                                    <div class="md-list-item-text" layout="column">
+                                        <h3>{{lang.safeAreaPersons}}: <b class="color-green">{{ men.safe }}</b></h3>
+                                        <h4>{{ men.safe }} {{lang.safeAreaPersons | lowercase}}</h4>
+                                    </div>
+                                </md-list-item>
+                                <md-list-item class="md-3-line">
+                                    <img src="img/icons/unsafe-men.png" class="md-avatar"
+                                        alt="{{lang.notSafeAreaPersons}}" title="{{lang.notSafeAreaPersons}}">
+                                    <div class="md-list-item-text" layout="column">
+                                        <h3>{{lang.notSafeAreaPersons}}: <b class="color-red">{{ men.unsafe }}</b></h3>
+                                        <h4>{{ men.unsafe }} {{lang.notSafeAreaPersons | lowercase}}</h4>
+                                        <md-select ng-if="unsafeTags.length > 0" ng-model="antani"
+                                                placeholder="{{lang.lostPersons}}">
+                                            <md-option ng-value="tag" ng-disabled="$index + 1" ng-repeat="tag in unsafeTags">
+                                                {{tag.name}}
+                                            </md-option>
+                                        </md-select>
+                                    </div>
+                                </md-list-item>
+                            </md-list> -->
                         </div>
-                    </md-list-item>
-                </md-list>
+                    </div>
+                </div>
+                <div ng-if="!isAnchorsEmpty()" layout="row" class="text-center font-x-large text-bold color-red">
+                    <p class="width-100">{{totalPresent}} in zone di evacuazione su un totale di {{totalZones}}</p>
+                </div>
             </div>
         </div>
         <div layout="row" layout-align="center center">
