--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,15 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>3.39.1 Evacuazione</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Implementato la cancellazione del local storage su  logout</span><br>
+                            <span class="color-green text-bold">Resa visibile l'eticheta Max People nella tabella ancore</span><br>
+                            <span class="color-green text-bold">Ridefinito il totale nella tabella evacuazione e aggiustata il grafico a torta</span><br>
+                        </td>
+                        <td md-cell>24/09/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>3.38.0 Evacuazione</td>
                         <td md-cell>
                             <span class="color-green text-bold">Implementata la segnalazione delle zone che hanno superato la capienza massima</span><br>
