--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,13 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>3.39.2 Total location tags</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Calcolo i tag presenti nella location prendendo tutte le ancore della location e vedendo quali tag sono associati</span><br>
+                        </td>
+                        <td md-cell>24/09/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>3.39.1 Evacuazione</td>
                         <td md-cell>
                             <span class="color-green text-bold">Implementato la cancellazione del local storage su  logout</span><br>
