--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,15 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>3.40.0 Evacuazione</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Implementata la visualizzazione del nome della zona sul canvas</span><br>
+                            <span class="color-green text-bold">Implementata la gestione di tutti i tag spenti nella finestra evacuazione</span><br>
+                            <span class="color-green text-bold">Implementata la gestione dell'evacuazione senza ancore</span><br>
+                        </td>
+                        <td md-cell>24/09/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>3.39.3 Emergency zone</td>
                         <td md-cell>
                             <span class="color-green text-bold">Fixed the insert_max_people_alert</span><br>
