--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,16 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>3.41.0 Affolamento zone</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Implementata la visualizzazione dell'icona affolamento zone considerando il 
+                                nuovo campo MAX_PEOPLE_ACTIVE e considerando il tipo di ancore, e prendendo in considerazione tutte le zone di tutti i piani all'interno della location attuale</span><br>
+                            <span class="color-green text-bold">Implementata la visualizzazione degli elementi all'interno della tabella affolamenti considerando la tipologia di ancore, 
+                                dando priorita' alla tipologia 5, e considerando tutte le zone di tutti i piani della location attuale.</span><br>
+                        </td>
+                        <td md-cell>28/09/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>3.40.0 Evacuazione</td>
                         <td md-cell>
                             <span class="color-green text-bold">Implementata la visualizzazione del nome della zona sul canvas</span><br>
