--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,14 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>3.42.0 Evacuazione tutta la location</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Implementata l'evacuazione considerando tutti i piani e tutti gli utenti della lcoation</span><br>
+                            <span class="color-green text-bold">Aggiustato l'update del campo Evacuazione della tabella anchors</span><br>
+                        </td>
+                        <td md-cell>29/09/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>3.41.0 Affolamento zone</td>
                         <td md-cell>
                             <span class="color-green text-bold">Implementata la visualizzazione dell'icona affolamento zone considerando il 
