--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,13 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>3.44.0 Aggiornamento zone e ancore</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Cambiata la visualizzazione delle zone e delle ancore sul canvas</span><br>
+                        </td>
+                        <td md-cell>30/09/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>3.43.0 VBATT e altre modifiche</td>
                         <td md-cell>
                             <span class="color-green text-bold">Implementato il campo vbatt nella tabella ancore e le operazioni crud</span><br>
@@ -47,7 +54,7 @@
                             <span class="color-green text-bold">Aggiustata la visualizzazione della percentuale di batteria nella tabella dei tag</span><br>
                             <span class="color-green text-bold">Aggiustata la visualizzazione della posizione di un tag in allarme quendo lo cerco da una location indoor</span><br>
                         </td>
-                        <td md-cell>29/09/2020</td>
+                        <td md-cell>30/09/2020</td>
                     </tr>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>3.42.0 Evacuazione tutta la location</td>
