--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,13 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>3.45.1 Carricamento imagina all'avvio</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Carico le immagini dei tag, camere e ancore all'avvio dell'applicazione</span><br>
+                        </td>
+                        <td md-cell>12/10/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>3.45.0 Icona ancore tipo 5</td>
                         <td md-cell>
                             <span class="color-green text-bold">Implementata la visualizzazione dell'icona delle ancore di tipo 5 nella tabella ancore</span><br>
