--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,13 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>3.45.2 Fix visualizzazione tag cloud</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Aggiustata la visualizzazione dei tag cloud</span><br>
+                        </td>
+                        <td md-cell>14/10/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>3.45.1 Carricamento imagina all'avvio</td>
                         <td md-cell>
                             <span class="color-green text-bold">Carico le immagini dei tag, camere e ancore all'avvio dell'applicazione</span><br>
