--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,13 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>3.46.0 Implementata la cancellazione dell history con filtri</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Implementata la cancellazione della history con i filtri</span><br>
+                        </td>
+                        <td md-cell>27/10/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>3.45.2 Fix visualizzazione tag cloud</td>
                         <td md-cell>
                             <span class="color-green text-bold">Aggiustata la visualizzazione dei tag cloud</span><br>
