V 3.46.1 FIX FLOOR ZONES
- Fixed the visualization of the zones from a floor to another (re-initialized the array of zones when change the floor)

--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,13 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>3.46.1 Visualizzazine zone</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Aggiustata la visualizzazione delle zone da un piano all'altro. Inizializzato l'array delle zone quando cambio piano. La richiesta precedente era di non cancellare le zone se non arrivano da database quindi se andavi su un piano nuovo che non aveva zone allora rimanevano le zone precedenti.</span><br>
+                        </td>
+                        <td md-cell>01/11/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>3.46.0 Implementata la cancellazione dell history con filtri</td>
                         <td md-cell>
                             <span class="color-green text-bold">Implementata la cancellazione della history con i filtri</span><br>
